# CivicTwin-Digital-Twin-of-India

./: .cursorrules  .gitignore  LICENSE  PLAN.md  README.md  ruff.toml
.github/workflows/: lint.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/civictwin_backend/: __init__.py  config.py  database.py  main.py
backend/civictwin_backend/models/: __init__.py  climate.py  scenario.py  zone.py
backend/civictwin_backend/routers/: __init__.py  climate.py  inference.py  scenarios.py  simulation.py  zones.py
backend/civictwin_backend/schemas/: __init__.py  climate.py  scenario.py  zone.py
backend/civictwin_backend/services/: __init__.py  climate_service.py  inference_client.py  scenario_service.py
backend/civictwin_backend/utils/: __init__.py  geo.py
etl/: __init__.py  cpcb_fetcher.py  db_writer.py  gee_fetcher.py  grid_fuser.py  imd_fetcher.py  ingest.py  mosdac_fetcher.py  requirements.txt  ruff.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: InfoModal.tsx  Map.tsx  Metrics.tsx  Sidebar.tsx
frontend/src/services/: api.ts
frontend/src/store/: appStore.ts
infra/: .env.example  docker-compose.yml
infra/supabase/migrations/: 001_init.sql
ml/: pyproject.toml
ml/civictwin_ml/: __init__.py  data_loader.py  losses.py  pinn.py  train.py
ml/hf_space/: app.py
